<resources>
    <string name="app_name">长白山</string>

    <string name="tab1">首页</string>
    <string name="tab2">购物车</string>
    <string name="tab3">我的</string>
    <string name="hello_blank_fragment">hello fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">天赐清新甘甜之水，源自大自然之水</string>
    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bonus_points">BonusPointsActivity</string>
    <string name="gifts_received"><u>收到的礼物</u></string>

    <string name="rule_1">1: 成功邀请一位好友注册，送100个积分。</string>
    <string name="rule_2">2: 好友订水成功，送您好友订水金额*0.1个积分。<br/>
        <font color="#999999">(例: 好友成功订购1000块钱的水，您将获得100个积分。)</font></string>
    <string name="rule_3">3: 积分可用于抵扣订水金额。</string>

</resources>
