<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.anxin.changbaishan.view.account.ShareActivity">

    <include
        layout="@layout/layout_title_normal"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bg_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/share_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#3a6b6b6b"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="好友注册获得"
                    android:id="@+id/textView25"/>

                <TextView
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/tv_reg"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_below="@+id/textView25"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/textView28"
                    android:text="好友订水获得"
                    android:layout_below="@+id/tv_deliver"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/tv_deliver"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_above="@+id/tv_reg"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="累计已获得奖励 (分)"
                android:layout_above="@+id/tv_total"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:text="null"
                android:textStyle="bold"
                android:layout_above="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:id="@+id/tv_total"/>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="奖励规则:"/>

    <TextView
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/rule_1"
        android:textColor="@color/black_333"/>

    <TextView
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/rule_2"
        android:textColor="@color/black_333"/>

    <TextView
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/rule_3"
        android:textColor="@color/black_333"/>

    <Button
        android:layout_marginTop="33dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:text="分享"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_stroke_green_bg"
        android:id="@+id/btn_share"/>

</LinearLayout>
